--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "generate-db": "node seed_data/databaseLoader.js"
+    "generate-db": "node seed_data/databaseLoader.js",
+    "server": "nodemon server/index.js",
+    "webpack": "webpack -d --watch"
   },
   "dependencies": {
     "css-loader": "^1.0.0",
