--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "webpack": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-jest": "^23.6.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
@@ -29,6 +31,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^23.6.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   }
