--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^23.6.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
   }
