--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "file-loader": "^2.0.0",
     "jest": "^23.6.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.18.0",
