--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "generate-db": "node seed_data/databaseLoader.js",
     "server": "nodemon server/index.js",
-    "webpack": "webpack -d --watch"
+    "webpack": "webpack -d --watch",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -33,6 +34,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "file-loader": "^2.0.0",
     "jest": "^23.6.0",
+    "puppeteer": "^1.8.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
